public/stylesheets/blog.css
/* ... */
.cutout .image-wrap:after {
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), 0 4px 5px rgba(0, 0, 0, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.6) inset;
}

#post-info {
  position: relative;
}

#post-info header {
  margin-bottom: 15px;
  border-bottom: 1px dotted #ccc;
}

#post-info time {
  border-bottom: none;
  padding: 0 0;
}

#post-info h1 {
  font-size: 18px;
  letter-spacing: normal;
  line-height: 24px;
}

#post-info h2 {
  font-size: 14px;
  letter-spacing: normal;
  line-height: 18px;
  margin: 6px 0;
}

#post-info header {
  display: none;
}

#post-info .inactive {
  background: none;
}

#post-info .inactive a {
  color: #333;
  border: none;
}

#post-info h1 a, #post-info h2 a {
  color: #df0d32;
  color: rgba(223, 13, 50, 0.7);
  border-bottom: 1px dotted #df0d32;
}

#post-info h1 a:hover, #post-info h2 a:hover {
  color: #df0d32;
	color: rgba(223, 13, 50, 1);
}

#post-info div.fixed {
  position: fixed;
  top: 30px;
  width: 298px;
}

